добавлена основа для тестов на поиск длины уникальности